# cv_learning_resnet50

./: .gitignore  LICENSE  README.en.md  README.md
0_gray/: rgb_to_gray.py
1_RGB/: rgb.py  rgb_to_yuv.py
2_mean_blur/: mean_blur.py
3_gussian_blur/: gussian_blur.py  gussian_kernel_2D_3D.py
4_canny/: canny.py
5_dajin/: dajin.py  luna.jfif
6_minst/: mnist.py
cpp/: .clang-format  build.sh  format.sh  main.cc  resnet.h  resnet_avx2.h
cpp/1st_origin/: main.cc
cpp/1st_version/: build.sh  resnet.h
cpp/2nd_version_avx2/: main.cc
cpp/3rd_preload/: build.sh  main.cc  resnet_preload.h
cpp/3rd_version_avx2_preload/: main.cc
cpp/5th_WarmUp/: resnet_warmup.h
cpp/6th_CodeGen/: main.cc  resnet_codegen.h
model/resnet50_weight/: resnet50_conv1_param.txt  resnet50_fc_bias.txt  resnet50_layer1_bottleneck0_bn3_running_var.txt  resnet50_layer1_bottleneck0_bn3_weight.txt  resnet50_layer1_bottleneck0_downsample_batchnorm_bias.txt  resnet50_layer1_bottleneck1_bn1_weight.txt  resnet50_layer1_bottleneck1_bn2_running_mean.txt  resnet50_layer1_bottleneck1_bn3_running_mean.txt  resnet50_layer1_bottleneck1_bn3_running_var.txt  resnet50_layer1_bottleneck2_bn1_running_mean.txt  resnet50_layer1_bottleneck2_bn1_running_var.txt  resnet50_layer1_bottleneck2_bn3_running_mean.txt  resnet50_layer1_bottleneck2_conv1_param.txt  resnet50_layer1_bottleneck2_conv1_weight.txt  (+42 more)
new_patch/cpp/: label.h
practice/cpp/4th_no_malloc/: CMakeLists.txt  main.cc  resnet_no_malloc.cc
practice/cpp/4th_no_malloc/ops/: conv2d.cc  fc.cc  pool.cc
python/: my_infer.py  v0.1_debug_myInfer.bk.py
(+347 files in other folders)
